Adicionando testes unitários + otimização de imports e reformatação do código todo.